--- a/orm/student/templates/student/index.html
+++ b/orm/student/templates/student/index.html
@@ -1,3 +1,8 @@
 {% for val in students %}
-    <p>{{val.name}}</p>
+    <p>
+        {{val.name}}
+        {{val.course__students__name}}
+        {{val.course__description}}
+        {{val.course__lesson__name}}
+    </p>
 {% endfor %}
